# edt-finalproject-nand

./: .cproject  .gitignore  .project  CMakeLists.txt  ProjectHome.md  gdbinit  positions.txt  testPositions.txt
ProvaMC/: .cproject  .project  Meshing.cpp  Meshing.hpp  MeshingVoxel.hpp  Point3D.cpp  Point3D.hpp  ProvaMC.cpp  ProvaMC.hpp  SimpleBox.hpp  StoredData.cpp  StoredData.hpp  Triangle.cpp  Triangle.hpp  Utilities.cpp  Utilities.hpp  Voxel.hpp  VoxelInfo.cpp  VoxelInfo.hpp  constants.hpp  main.cpp
relazione/: 00cleaner.sh  CNCSimulator_relazione.tex  biblio.bib  cncsimulator.kilepr  commands.tex  relazione.aux  relazione.tex  titlepage.tex
relazione/img/: callgraph.dot.epsi  meshing_octree.vsd  octree_nodes.vsd  outputFile.txt  queue_parallel.vsd  uml_cncsimulator.dia  uml_cncsimulator.vsd  uml_meshing.vsd  uml_milling.vsd
relazione/section/: conclusione.tex  esempio-lavorazione.tex  introduzione.tex  introduzione.tex.backup  modules.tex  modules.tex.backup  modules_configurator.tex  modules_mesher.tex  modules_miller.tex  modules_visualizer.tex  strumenti-compilazione.tex
source/: CMakeLists.txt  doxyconfig  main.cpp
source/common/: AtomicNumber.cpp  AtomicNumber.hpp  CMakeLists.txt  Color.cpp  Color.hpp  EulerAngles.cpp  EulerAngles.hpp  Mesh.cpp  Mesh.hpp  Model3D.hpp  OSGMesh.cpp  OSGMesh.hpp  Point3D.cpp  Point3D.hpp  Rototraslation.cpp  Rototraslation.hpp  Utilities.cpp  Utilities.hpp  constants.hpp  meshes.hpp
source/configuration/: CMakeLists.txt  CNCMove.cpp  CNCMove.hpp  CNCMoveIterator.cpp  CNCMoveIterator.hpp  CommandLineParser.cpp  CommandLineParser.hpp  ConfigFileParser.cpp  ConfigFileParser.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  CutterDescription.cpp  CutterDescription.hpp  Geometry.hpp  StockDescription.cpp  StockDescription.hpp  StockDescriptor.cpp  StockDescriptor.hpp
source/meshing/: BranchNodeData.hpp  CMakeLists.txt  CommonMesher.cpp  CommonMesher.hpp  CubeCache.cpp  CubeCache.hpp  Face.cpp  Face.hpp  LeafNodeCallback.hpp  LeafNodeData.cpp  LeafNodeData.hpp  MarchingCubeMesher.hpp  MeshOctree.cpp  MeshOctree.hpp  Mesher.hpp  Meshing.cpp  Meshing.hpp  MeshingInfo.cpp  MeshingInfo.hpp  MeshingUtils.cpp  MeshingUtils.hpp  MeshingVoxel.cpp  MeshingVoxel.hpp  OctreeNodeData.cpp  OctreeNodeData.hpp  StockMesher.cpp  StockMesher.hpp  StubMesher.hpp  VoxelMesher.hpp  leaf_node_callbacks.hpp
source/meshing/mesherCallbacks/: BoxMesherCallback.hpp  MarchingCubeConstants.hpp  MarchingCubeMesherCallback.cpp  MarchingCubeMesherCallback.hpp  MeshingVoxel.cpp  MeshingVoxel.hpp
source/milling/: Adjacencies.cpp  Adjacencies.hpp  CMakeLists.txt  Corner.hpp  Cutter.cpp  Cutter.hpp  IntersectionResult.cpp  IntersectionResult.hpp  MeshingInfo.hpp  MillingAlgorithm.cpp  MillingAlgorithm.hpp  MillingAlgorithmConf.hpp  MillingResult.hpp  Octree.hpp  PtrVersioner.hpp  ShiftedBox.hpp  SimpleBox.hpp  Stock.cpp  Stock.hpp  StoredData.cpp  StoredData.hpp  Vertex.cpp  Vertex.hpp  Voxel.cpp  Voxel.hpp  VoxelInfo.cpp  VoxelInfo.hpp  cutters.hpp  graphics_info.hpp  octree_nodes.hpp  octree_tickets.hpp
source/threading/: CMakeLists.txt  CyclicRunnable.cpp  CyclicRunnable.hpp  Runnable.hpp  SteppableController.cpp  SteppableController.hpp  SteppableRunnable.cpp  SteppableRunnable.hpp  ThreadPool.cpp  ThreadPool.hpp
source/visualizer/: CMakeLists.txt  CyclicRunnable.cpp  CyclicRunnable.hpp  Display.cpp  Display.hpp  DisplayInfo.hpp  DisplayTextual.cpp  DisplayTextual.hpp  InputDeviceStateType.cpp  InputDeviceStateType.hpp  KeyboardHandler.cpp  KeyboardHandler.hpp  KeyboardManager.cpp  KeyboardManager.hpp  MesherStub.hpp  MillerEndedException.hpp  MillerRunnable.cpp  MillerRunnable.hpp  MillingSignaler.cpp  MillingSignaler.hpp  Runnable.hpp  SceneUpdater.cpp  SceneUpdater.hpp  SignaledInfo.hpp  SteppableController.cpp  SteppableController.hpp  SteppableRunnable.cpp  SteppableRunnable.hpp  VisualizationUtils.cpp  VisualizationUtils.hpp  Visualizer.cpp  Visualizer.hpp
